# hdl_people_tracking

./: CMakeLists.txt  README.md  manifest.xml
hdl_people_tracking/: CMakeLists.txt  package.xml
hdl_people_tracking/apps/: hdl_people_detection_nodelet.cpp  hdl_people_tracking_nodelet.cpp
hdl_people_tracking/include/hdl_people_detection/: background_subtractor.hpp  cluster.hpp  cluster_detector.hpp  kidono_feature_extractor.hpp  marcel_people_detector.hpp  people_detector.h
hdl_people_tracking/include/hdl_people_tracking/: kalman_tracker.hpp  people_tracker.hpp
hdl_people_tracking/include/kkl/alg/: dp_means.hpp  nearest_neighbor_association.hpp
hdl_people_tracking/include/kkl/ml/: svm_scale.hpp
hdl_people_tracking/launch/: hdl_people_tracking.launch.py  hdl_people_tracking_vlp16.launch
hdl_people_tracking/msg/: ClusterArray.msg  Track.msg  TrackArray.msg
hdl_people_tracking/scripts/: dummy_map_publisher.py
hdl_people_tracking/src/: kidono_human_classifier.cpp
hdl_people_tracking_msgs/: CMakeLists.txt  package.xml
hdl_people_tracking_msgs/msg/: Cluster.msg  ClusterArray.msg  Track.msg  TrackArray.msg
include/hdl_people_tracking/: people_tracker.hpp
launch/: hdl_people_tracking.launch.py  hdl_people_tracking_static.launch
src/: kidono_human_classifier.cpp  people_detector.cpp
src/ToHumanState/: ToHumanState.py  manifest.xml
